# FXSoqqaBot

./: .gitignore  CLAUDE.md  GANN_ESOTERIC_RESEARCH.md  GANN_METHOD_ANALYSIS.md  GANN_STRATEGY_V9_SPEC.md  GANN_TRIANGLE_RECONSTRUCTION.md  MQL5_EA_DEVELOPMENT_GUIDE.md  SESSION_STATE.md  download_images.py  forum_scraper.py  mt5_test.ini  mt5_tools.py  pyproject.toml  test_optuna_check.db  validate_v92.py
.claude/: gsd-file-manifest.json  settings.local.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.claude/commands/: mt5.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
config/: default.toml  live.toml  paper.toml
gann_research/: __init__.py  __main__.py  backtester.py  box_manager.py  constants.py  convergence.py  data_loader.py  diagnose.py  execution.py  gann_angles.py  math_core.py  position_sizing.py  proportional.py  risk.py  run.py  run_angle_test.py  scale_constants.py  scalp_sim.py  sq9_engine.py  statistics.py  strategy.py  swing_detector.py  three_limits.py  time_structure.py  triangle_engine.py  vibration.py  wave_counter.py
gann_tester/: cpp_2024h1.csv  gann_backtest.cpp  py_2024_full.csv  py_2024h1.csv  t.cpp  test_simple.cpp  test_trades.csv  train_trades.csv
mql5/: GannScalper.mq5  GannScalperV92.mq5
tests/: conftest.py  test_analyzer.py  test_classifier.py  test_evolution.py  test_feedback_loop_wiring.py  test_learning_loop.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_retirement.py  test_shadow.py  test_trade_logger.py  test_trade_logging_wiring.py  test_tui_widgets.py  test_walk_forward_gate.py  test_web_server.py
(+370 files in other folders)
