[project]
name = "fxsoqqabot"
version = "0.1.0"
description = "Self-learning XAUUSD scalping bot for MetaTrader 5"
authors = [
    { name = "Jacob", email = "ekubmuhamedov@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "metatrader5>=5.0",
    "numpy>=2.4",
    "pandas>=2.2,<3.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "structlog>=25.5",
    "duckdb>=1.5",
    "pyarrow>=19.0",
    "aiosqlite>=0.22",
    "rich>=13.0",
    "pytz",
    "scipy>=1.17",
    "numba>=0.64",
    "nolds>=0.6.3",
    "textual>=8.1",
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.41",
    "lightweight-charts>=2.1",
    "plotly>=5.0",
    "deap>=1.4",
    "scikit-learn>=1.8",
    "optuna>=4.8",
    "tomli-w>=1.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
